# UFAM---Atividades

./: .gitignore  README.md
AC/: asciiFormat.s  atv2.s  calculoNota copy.s  calculoNota.s  code.s  enunciado_atividade_2.txt  errro.s  hello.s  input.s  mipsFile.s  mult.ass  multT.ass  multV2.ass  print.s  print2.s  print3.s  print4.s  printExemplo.s  printNumers.s  printTop.c  print_matrix.s  print_matrix_loop.s  print_matrix_loop_ult.s  print_matrix_loop_ur.s  print_matrix_loop_ur_2.s  sofrimento.s  tent2.ass  tentativa3.ass  tentativa_1.ass
AC/Natanael_Bezerra/: vida_menos_menos.s
AC/arduino/: TP4 - Natanael_Bezerra_de_Oliveira  refcto.cpp  tikerCode.cpp
AED1/CodeBeachDesafios/: desafio1  desafio1.c  ordenacao  ordenacao.c
AED1/arquivoBinarioParaStc/: main.c
AED1/conversaoArquivos/: main.c
AED1/conversaoDeArquivosQuestaoDemo/: analise.c  finalVersion.c  main.c  noCode.c
AED1/dezMaioresSalario/: main.c
AED1/filaNoCode/: main.c
AED1/fileAndLists/: main.c
AED1/findWords/: main.c  rteste.c
AED1/intercala/: main.c
AED1/lendoDeArquivoDeTexto/: contadorPalavras.c  kversion.c  q2.c  q2v3.c  q3.c  separandoPalavras.c
AED1/listaCircular/: main  main.c
AED1/listaEncadeada/: .gitignore  Makefile  README.md  main.c
AED1/listaListaTeste/: main.c
AED1/maiorGanhorPorCategoria/: main.c
AED1/manipulacaoArqSecTent/: main.c  oldVersion.c  struAnalose.c
AED1/medianaSalarios/: main.c
AED1/mesalidades/: README.md  main.c
AED1/miniSytem/: main.c
AED1/pilhaNoCode/: main.c
AED1/recorrenciasCaracter/: main.c  teste
AED1/stack/: main.c
AED1/uppeCase/: invt  main.c
AED2/arvores/: Makefile  main  main.cpp  prog  tree.cpp  tree.h
AED2/aula22_10_31/: profCode.c
AED2/avl/: arv_avl.c  arv_avl.h  arv_avl_teste.c
AED2/boraVercomofica/: main.c  ts
AED2/comparadorGenerico/: main.c  teste
AED2/dictionary/: usa  usade.c
AED2/dictionary_sStatc/: dic.natan  main.c  mainR.c
CG/: README.md  job_1_cicle.cpp  job_1_rectangle.cpp
CN/: elimi_gauss.ipynb  eliminacao_gauss.ipynb  erros.ipynb  erros.py  ieePadrao.ipynb  my_version.ipynb  padraoIEEE754.py  quest3.ipynb
EC/: logica.por
EC/counting_sort/: pyproject.toml
EC/counting_sort/counting_sort/: __init__.py
EC/counting_sort/tests/: test_counting_sort.py
IA/: blocks_world.pl
IC/Atividades/Ex03/: Enunciado.md  horse.py  horse_test.py  pyproject.toml
IC/Atividades/Ex03/src/: horse.py
IC/Atividades/Ex03/tests/: test_horse.py
IC/Atividades/Ex05/: Exe05.py  README.md  pyproject.toml
IC/Atividades/Ex05/src/: repeatcount.py
IC/Atividades/Ex05/tests/: test_repeatcount.py
IC/Atividades/Ex06/: pyproject.toml
IC/Atividades/Ex06/src/: Ex06.py
IC/Atividades/Ex06/tests/: test_take.py
IC/Atividades/Placa_mercosul/: README.md  pyproject.toml
IC/Atividades/Placa_mercosul/src/: __init__.py
IC/Atividades/Placa_mercosul/tests/: test_placa.py
IC/Atividades/Prova_parcial_1/: README.md  pyproject.toml
IC/Atividades/Prova_parcial_1/src/: prova.py
IC/Atividades/Prova_parcial_1/tests/: test_normax.py  test_retira.py
IC/Atividades/lista_sem_elementos_repetidos/: README.md  pyproject.toml
IC/Atividades/lista_sem_elementos_repetidos/src/: __init__.py
IC/Atividades/lista_sem_elementos_repetidos/tests/: test_norep.py
OC/: Natanael_Bezerra.circ  ULA.circ  assembleEscrita  code  divisionAssemble  memo.circ  memoriaRam.circ  montador.py  montadorV2.py  montadorV4.py  processadorV12.circ  processadorV13.circ  projeto01.circ  pyproject.toml  revisao.circ  screenTeste  screenTesteL  tc  test.py  test01  testeG  testeH.m  testeTeclado  writter.assemble  writter.out  writterV2.assemble
OC/Circuitos/: Unidade_de_controle.circ  aula01122022.circ  aula2.circ  processadorV1.circ  processadorV10.circ  processadorV11.circ  processadorV2.circ  processadorV4.circ  processadorV5.circ  processadorV6.circ  processadorV7.circ  processadorV8.circ  processadorV9.circ
OC/assembleCodes/: assembleEscrita  aula.assemble  bestteProcessor  divisionAssemble  divisionAssembleT  leitura.assemble  multiplicacaoCodeAssemble  nibT  profCodeAssemblle  save.assemble  screenTeste  screenTesteL  tc  test01  testeG  testeHalt.assemble  testeTeclado  vector_swap.s
OC/compiler/: app.py  prong.natan
OC/processadorV9/circuit/: processadorV9.circ
OC/versoesDoMontador/: montadorV3.py  montadorVCompact.py
PAA/: PAA_Equações.ipynb  chat_solution.py  insertion_sort.c  insertion_sort.out  maior_subsequencia_comum.c  pollen.cpp  questionA.c  sub.c
SL/primeiro_trabalho/versão_python/: README.md  pyproject.toml
SL/primeiro_trabalho/versão_python/app/: app.py
SL/primeiro_trabalho/versão_python/app/uteis/: utilltis.py
SL/primeiro_trabalho/versão_python/tests/: test_bsum.py  test_convertDecimalInAnyBase.py  test_convertInDecimal.py  test_sumBinary.py
SL/segundo_trabalho/version_python/: pyproject.toml
SL/segundo_trabalho/version_python/app/: app.py
SL/segundo_trabalho/version_python/app/utils/: __init__.py
TTCC/Segundo_Trabalho/: README.md  alunos_de_cc.py  calculo_1_primeira_analise.py  ic_perimeira_analise.py  md_primeira_analise.py  pyproject.toml  ttcc_primeira_analise.py
TTCC/Segundo_Trabalho/utils/: __init__.py
cursos/processamento_digital_de_imagens/trabalho1/: app.py  equalizacao.py  histoAndBinary.py  pyproject.toml  stretchingExponencial.py  stretchingLinear.py  stretchingLinearPorPartes.py  stretchingLog.py  stretchingQuadratica.py
(+315 files in other folders)
