[tool.poetry]
name = "oc"
version = "0.1.0"
description = ""
authors = ["NatanaelB <natanaelbezerra36@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
