[tool.poetry]
name = "horsegame"
version = "0.1.0"
description = "Atividade de introduçao a computaçao"
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
isort = "^5.10.1"
prospector = "^1.7.1"
blue = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
