[tool.poetry]
name = "atividade05"
version = "0.1.0"
description = "Atividade extra de IC"
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
