[tool.poetry]
name = "ex06"
version = "0.1.0"
description = ""
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.7"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
