[tool.poetry]
name = "placa_mercosul"
version = "0.1.0"
description = ""
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
