[tool.poetry]
name = "versão_python"
version = "0.1.0"
description = "Conversor de bases"
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
blue = "^0.9.0"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
