[tool.poetry]
name = "version_python"
version = "0.1.0"
description = ""
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
