[tool.poetry]
name = "trabalho1"
version = "0.1.0"
description = ""
authors = ["Natanael Bezerra de Oliveira <natanbezerr63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
opencv-python = "^4.6.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
